--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-torch=1.7.1
+torch==1.7.1
 ftfy 
 regex
 tqdm
 git+https://github.com/openai/CLIP.git
 torchvision
+scikit-learn
+joblib
 
 # For Installing CLIP model
 # $ conda install --yes -c pytorch pytorch=1.7.1 torchvision cudatoolkit=11.0
